some responsive design

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <body>
     <h1 class="heading--1">Digital Clock</h1>
     <div class="container">
-      <p class="day">Day</p>
-      <p class="time">Time</p>
-      <p class="date">Date</p>
+      <p class="day">&nbsp;</p>
+      <p class="time">&nbsp;</p>
+      <p class="date">&nbsp;</p>
     </div>
     <script src="script.js"></script>
   </body>
